--- a/src/scss/utils/_variables.scss
+++ b/src/scss/utils/_variables.scss
@@ -3,19 +3,19 @@
 /// The delimiter of configuration path
 ///
 /// @access private
-$config-delimiter: "." !default;
+$config-delimiter: "." !default !global;
 
 /// The configuration storage
 ///
 /// @access private
-$config-attr: () !default;
+$config-attr: () !default !global;
 
 /// The default configuration storage
 ///
 /// @access private
-$config-default: () !default;
+$config-default: () !default !global;
 
 /// Namespace for settings
 ///
 /// @access public
-$config-namespace: "" !default;
+$config-namespace: "" !default !global;
