--- a/src/scss/functions/_config-set.scss
+++ b/src/scss/functions/_config-set.scss
@@ -14,14 +14,14 @@
     @if config-map-has($config-default, $key) {
       $value: config-map-get($config-default, $key);
     } @else {
-      @if ($config-manger-variables == 'global') {
+      @if ($config-manger-variables == "global") {
         $config-default: config-map-set($config-default, $key, $value) !global;
       } @else {
         $config-default: config-map-set($config-default, $key, $value);
       }
     }
   } @else {
-    @if ($config-manger-variables == 'global') {
+    @if ($config-manger-variables == "global") {
       $config-attr: config-map-set($config-attr, $key, $value) !global;
     } @else {
       $config-attr: config-map-set($config-attr, $key, $value);
