--- a/tests/specs/scss/common.scss
+++ b/tests/specs/scss/common.scss
@@ -1,5 +1,5 @@
 
-@include test-module("Functions") {
+@include test-module("Common") {
 
   // Testing set functions
   @include test("config-set [function] Set a single key.") {
@@ -12,20 +12,6 @@
 
     @include config-reset("bar");
     @include config-reset("color");
-  }
-
-   // Testing namespace set functions
-  @include test("config-set [function] Set a single key with namespace.") {
-    $config-namespace: "test-" !global;
-
-    @include config-set("bar", "foo");
-    @include config-set("color", #fff);
-
-    $expect: ("test-bar": "foo", "test-color": #fff);
-
-    $config-namespace: "" !global;
-
-    @include assert-equal($config-attr, $expect, "Check if map is correct.");
   }
 
   // Testing set functions
